--- a/vForum/Controller/Feed/CreateFeed/FeedLoadImage/FeedLoadImageCollectionViewCell.xib
+++ b/vForum/Controller/Feed/CreateFeed/FeedLoadImage/FeedLoadImageCollectionViewCell.xib
@@ -11,32 +11,57 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="FeedLoadImageCollectionViewCell" customModule="vForum" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="198" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                <rect key="frame" x="0.0" y="0.0" width="198" height="200"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EfM-sg-o6e">
-                        <rect key="frame" x="-20" y="0.0" width="240" height="200"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EfM-sg-o6e">
+                        <rect key="frame" x="-20" y="0.0" width="238" height="200"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N4d-zT-jLG">
                                 <rect key="frame" x="20" y="-36" width="200" height="236"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7o-0p-MZc">
+                                <rect key="frame" x="216" y="0.0" width="22" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="T7o-0p-MZc" secondAttribute="height" multiplier="1:1" id="spw-EW-Q9l"/>
+                                </constraints>
+                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="multiply.circle.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="DELETEIMAGE:" destination="gTV-IL-0wX" eventType="touchUpInside" id="Nr8-0i-NkP"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="T7o-0p-MZc" secondAttribute="trailing" id="j3k-BY-6R3"/>
+                            <constraint firstItem="T7o-0p-MZc" firstAttribute="top" secondItem="EfM-sg-o6e" secondAttribute="top" id="lhi-BI-aCS"/>
+                        </constraints>
                     </view>
                 </subviews>
             </view>
+            <constraints>
+                <constraint firstItem="EfM-sg-o6e" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="HVa-su-Szc"/>
+                <constraint firstItem="EfM-sg-o6e" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="kup-eC-5T7"/>
+                <constraint firstItem="EfM-sg-o6e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="-20" id="pQH-EA-Gto"/>
+                <constraint firstItem="EfM-sg-o6e" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="wXp-f0-qAO"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="200" height="200"/>
+            <size key="customSize" width="198" height="200"/>
             <connections>
+                <outlet property="DELETEIMAGE" destination="T7o-0p-MZc" id="72j-ra-wJj"/>
+                <outlet property="btnDeleteImage" destination="T7o-0p-MZc" id="gB1-KN-les"/>
                 <outlet property="imageUpload" destination="N4d-zT-jLG" id="Hd9-sA-rLS"/>
                 <outlet property="viewContain" destination="EfM-sg-o6e" id="CJ2-ps-x9f"/>
             </connections>
-            <point key="canvasLocation" x="246.37681159420291" y="38.169642857142854"/>
+            <point key="canvasLocation" x="244.92753623188409" y="38.169642857142854"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="multiply.circle.fill" catalog="system" width="128" height="121"/>
+    </resources>
 </document>
