--- a/vForum/View/Forum/PostDetail/PostDetailViewController.xib
+++ b/vForum/View/Forum/PostDetail/PostDetailViewController.xib
@@ -16,11 +16,11 @@
                 <outlet property="likeCountOutlet" destination="Ni2-3l-ZmG" id="48c-zb-1pC"/>
                 <outlet property="likeImgOutlet" destination="SEN-Cz-EP6" id="dRg-CY-g30"/>
                 <outlet property="listCmtOutlet" destination="U7B-kS-96L" id="Jop-Dq-MkK"/>
-                <outlet property="mainViewOutlet" destination="Vvf-Ve-WAl" id="vYi-QF-Ipc"/>
+                <outlet property="mainViewOutlet" destination="Vvf-Ve-WAl" id="8NE-B7-EbU"/>
                 <outlet property="scrollMainView" destination="0ng-5W-qns" id="lFE-UI-Vtr"/>
-                <outlet property="titlePostOutlet" destination="0Cd-nd-oJV" id="rQf-Yw-F7X"/>
+                <outlet property="titlePostOutlet" destination="0Cd-nd-oJV" id="er5-lI-lW9"/>
                 <outlet property="userOutlet" destination="Phk-G4-2cy" id="Paz-pL-tVI"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="fzd-ga-2wc"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
