--- a/vForum/View/Forum/TopicList/ForumGroupView.xib
+++ b/vForum/View/Forum/TopicList/ForumGroupView.xib
@@ -41,6 +41,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <textInputTraits key="textInputTraits"/>
+                        <connections>
+                            <outlet property="delegate" destination="-1" id="Lf8-6J-WcL"/>
+                        </connections>
                     </searchBar>
                 </tableView>
             </subviews>
