--- a/vForum/Controller/Feed/CommentFeed/CommentFeedTableViewCell/FeedCommentTableViewCell.xib
+++ b/vForum/Controller/Feed/CommentFeed/CommentFeedTableViewCell/FeedCommentTableViewCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="77" id="KGk-i7-Jjw" customClass="FeedCommentTableViewCell" customModule="vForum" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="360" height="77"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="162" id="KGk-i7-Jjw" customClass="FeedCommentTableViewCell" customModule="vForum" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="360" height="162"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="360" height="77"/>
+                <rect key="frame" x="0.0" y="0.0" width="360" height="162"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tMG-AK-1lx" customClass="ReuseFeedComment" customModule="vForum" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="360" height="77"/>
+                        <rect key="frame" x="0.0" y="0.0" width="360" height="162"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     </view>
                 </subviews>
@@ -30,7 +30,10 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="166.66666666666669" y="58.59375"/>
+            <connections>
+                <outlet property="reuseComment" destination="tMG-AK-1lx" id="vyM-ER-GTV"/>
+            </connections>
+            <point key="canvasLocation" x="169.56521739130437" y="107.14285714285714"/>
         </tableViewCell>
     </objects>
 </document>
