--- a/vForum/View/ReusableView/FeedCard/Cell/ImageFeedCell.xib
+++ b/vForum/View/ReusableView/FeedCard/Cell/ImageFeedCell.xib
@@ -17,8 +17,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="256" height="243"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="biK-xY-Knu">
-                        <rect key="frame" x="0.0" y="0.5" width="256" height="242"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="biK-xY-Knu">
+                        <rect key="frame" x="0.0" y="1" width="256" height="240.5"/>
+                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </imageView>
                 </subviews>
             </view>
@@ -30,10 +31,13 @@
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="256" height="243"/>
+            <connections>
+                <outlet property="imageView" destination="biK-xY-Knu" id="TLQ-SF-Df0"/>
+            </connections>
             <point key="canvasLocation" x="120" y="59"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="person.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="photo.fill" catalog="system" width="128" height="93"/>
     </resources>
 </document>
