--- a/vForum/View/ReusableView/FeedComment/ReuseFeedComment.xib
+++ b/vForum/View/ReusableView/FeedComment/ReuseFeedComment.xib
@@ -21,7 +21,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="863" height="146"/>
+            <rect key="frame" x="0.0" y="0.0" width="873" height="215"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2PX-Ld-0el">
@@ -36,8 +36,8 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Content...Content...Content...Content... Content...Content...Content...Content...Content...Content... Content...Content..." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swn-Fk-Tg3">
-                    <rect key="frame" x="50" y="39" width="803" height="69"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="1 2 3 4 5" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swn-Fk-Tg3">
+                    <rect key="frame" x="50" y="39" width="813" height="138"/>
                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -50,20 +50,20 @@
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B88-ge-AB8">
-                    <rect key="frame" x="50" y="113" width="22" height="23"/>
+                    <rect key="frame" x="50" y="182" width="22" height="23"/>
                     <state key="normal" image="notlike"/>
                     <connections>
                         <action selector="LIKECOMMENTACTION:" destination="-1" eventType="touchUpInside" id="zwF-bN-N14"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 like" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B7L-o6-Nj3">
-                    <rect key="frame" x="82" y="117.5" width="34.5" height="18.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B7L-o6-Nj3">
+                    <rect key="frame" x="82" y="186.5" width="9" height="18.5"/>
                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Utz-fl-Ozd">
-                    <rect key="frame" x="834" y="10" width="24" height="20"/>
+                    <rect key="frame" x="844" y="10" width="24" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="YOn-HJ-qTr"/>
                     </constraints>
@@ -94,7 +94,7 @@
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="UKW-Re-ofe" secondAttribute="trailing" constant="10" id="wfz-Uy-MO5"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="151.44927536231884" y="-84.375"/>
+            <point key="canvasLocation" x="144.20289855072465" y="-61.272321428571423"/>
         </view>
     </objects>
     <resources>
