--- a/vForum/View/Forum/PostDetail/PostDetailViewController.xib
+++ b/vForum/View/Forum/PostDetail/PostDetailViewController.xib
@@ -99,6 +99,9 @@
                         <color key="titleColor" red="0.6705882353" green="0.66274509800000003" blue="0.76470588240000004" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" red="0.6705882353" green="0.66274509800000003" blue="0.76470588240000004" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="cmtThisPost:" destination="-1" eventType="touchUpInside" id="lZ6-Lb-BO6"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
